cmake-gui: misleading help string on toolset selection field
Error at search C/CPP compilers: "8.1 sdk not found" , but i have only v141_xp toolset and 7.0 sdk. How to "Configure" cmake for using v141_xp 7.0SDK VS 2017 RC?
Error at search C/CPP compilers: "8.1 sdk not found" , but i have only v141_xp toolset and 7.0 sdk. How to "Configure" cmake for using v141_xp 7.0SDK VS 2017 RC?