cmake-gui: Clarify help string on toolset selection field

The text `-T parameter` may be read as an example value for the field,
but the `-T` part should not be included.  Clarify the wording.

Closes: #16475